2005-05-16  Grahame Bowland  <grahame@angrygoats.net>

	* monotone.texi: update "monotone log" documentation
	* commands.cc: fix "monotone log" when run with no --revision args

2005-05-15  Derek Scherger  <derek@echologic.com>

	* netsync.cc (process_anonymous_cmd, process_auth_cmd): log
	details of permissions allowed/denied
	* tests/t_netsync_permissions.at: new test
	* testsuite.at: call it

2005-05-15  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-notify.pl (revision_is_in_branch): Another
	place where --revision was missing.

2005-05-14  Timothy Brownawell  <tbrownaw@gmail.com>

	* contrib/monoprof.sh: Clean up variable definitions some.
		- Add option --datadir, should now be usable without editing
		variables to match system paths
		- Add option --setup, generates most of the needed files

2005-05-13  Timothy Brownawell  <tbrownaw@gmail.com>

	Add "monotone automate stdio", to let the automation interface
	take commands on standard input.
	* automate.cc: (automate_stdio) New function.
		(automate_command) Add it.
	* commands.cc: Add to description for "automate".
	* monotone.texi: Add to documentation.

2005-05-13  Joel Reed  <joelwreed@comcast.com>

	* tests/t_unidiff3.at: opps. forgot to add this file which
	should have been included as fix for bug 13072.

2005-05-13  Joel Reed  <joelwreed@comcast.com>

	* diff_patch.cc, transforms.cc, testsuite.at: Patch from 
	drepper@redhat.com, who writes: "The attached patch should fix bug
	13072.  I have no idea why the code in transform.cc insists on
	adding an empty line in case the file is empty. Removing the code
	didn't cause any regressions in the test suite and the
	diff_patch.cc change corrects the output format.  A new test case
	is included as well."

2005-05-13  Joel Reed  <joelwreed@comcast.com>

	* automate.cc: add automate attributes command
	* commands.cc: add attributes subcommand helptext
	* contrib/monotone.zsh_completion: use automate attributes